# uddl-owl-paper

./: README.md  entity-association-explainer.mmd  hypergraph-lit-review.tex  junk.tex  main.tex  make_diagrams.sh  meson.build  original-template.tex  ref.bib  references.bib
src/: add_individuals.py  compile_tex.py  generate_example_queries_table.py  generate_ontology_summary_stat_table.py  generate_summary_stat_table.py  parse_tuple.py  participant_path_parser.py  query_parser.py  query_path_conversion.py  revised_query_parser.py  sparql_conversion.py  tuple.py  tuple2owl.py  uddl2owl.py  uddl2tuple.py  visowl.py  vistuple.py
src/examples/: airframe.txt  gordon.txt  incose_uddl2owl.face  incose_uddl2owl.txt  satellite.txt  spacecraft.owl  stu-minimal.txt
src/tests/: test_gordon.py
